--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   app:
@@ -14,6 +14,7 @@ services:
       - DATABASE_URL=sqlite:///app/database/events.db
       - BLUESKY_DISCOVEROSHKOSH_PASSWORD=${BLUESKY_DISCOVEROSHKOSH_PASSWORD}
       - BLUESKY_WISCONSINEVENTS_PASSWORD=${BLUESKY_WISCONSINEVENTS_PASSWORD}
+      - PROD=${PROD}
 
   db:
     image: nouchka/sqlite3
