--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - .env
     volumes:
       - .:/app
+      - db_data:/app/database
     command: python src/main.py
     depends_on:
       - db
