--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
         "5 days",
         "1 day"
       ],
-      "account_username": "discoveroshkosh",
+      "account_username": "discoveroshkosh.bsky.app",
       "hashtags": ["#oshkosh", "#oshkoshevents", "#wisconsin"]
     },
     {
@@ -21,7 +21,7 @@
         "5 days",
         "1 day"
       ],
-      "account_username": "wisconsinevents",
+      "account_username": "wisconsinevents.bsky.app",
       "hashtags": ["#winnebago", "#winnebagoevents", "#wisconsin"]
     }
   ],
