Revert "re-working auth a bit. More debugging."
This reverts commit 379b5a8498d06e3de3e815c5fac1d83915ddc593.

--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
         "5 days",
         "1 day"
       ],
-      "account_username": "discoveroshkosh.bsky.app",
+      "account_username": "discoveroshkosh",
       "hashtags": ["#oshkosh", "#oshkoshevents", "#wisconsin"]
     },
     {
@@ -21,7 +21,7 @@
         "5 days",
         "1 day"
       ],
-      "account_username": "wisconsinevents.bsky.app",
+      "account_username": "wisconsinevents",
       "hashtags": ["#winnebago", "#winnebagoevents", "#wisconsin"]
     }
   ],
